--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -19,12 +19,12 @@
     <script src="/main.js"></script>
 </head>
 <body>
-    {% include 'header.njk' %}
+    {% include '_header.njk' %}
     
     <main>
     {{ content | safe }}
     </main>
     
-    {% include 'footer.njk' %}
+    {% include '_footer.njk' %}
 </body>
 </html>
