--- a/src/work/index.njk
+++ b/src/work/index.njk
@@ -12,7 +12,7 @@ layout: 'base.njk'
     <div class="projects">
 
         {% for project in collections.project | reverse %}
-            {% include 'project-snippet.njk' %}
+            {% include '_project-snippet.njk' %}
         {% endfor %}
         
     </div>
