--- a/src/_includes/_footer.njk
+++ b/src/_includes/_footer.njk
@@ -1,19 +1,3 @@
-{# ---
-socialLinks: 
-  - name: LinkedIn
-    url : https://www.linkedin.com/
-    img : https://via.placeholder.com/50
-    imgAlt: "Placeholder Image"
-  - name: Behance
-    url : https://www.linkedin.com/
-    img : https://via.placeholder.com/50
-    imgAlt: "Placeholder Image"
-  - name: Instagram
-    url : https://www.linkedin.com/
-    img : https://via.placeholder.com/50
-    imgAlt: "Placeholder Image"
---- #}
-
 <footer>
     <div class="copy-right">
         <p>Copyright @2021 John Doe</p>
@@ -24,12 +8,12 @@ socialLinks:
                 <p>Follow Me</p>
             </div>
 
-            {# {% for item in socialLinks %}
+            {% for item in socialLinks %}
                 <div class="footer-link">
                     <img src="{{ item.img }}" alt="{{ item.imgAlt }}">
                     <a href="#">{{ item.name }}</a>
                 </div>
-            {% endfor %} #}
+            {% endfor %}
 
             {# <div class="footer-link">
                 <img src="https://via.placeholder.com/50" alt="LinkedIn">
