--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,3 +1,19 @@
+---
+socialLinks: 
+  - name: LinkedIn
+    url : https://www.linkedin.com/
+    img : https://via.placeholder.com/50
+    imgAlt: "Placeholder Image"
+  - name: Behance
+    url : https://www.linkedin.com/
+    img : https://via.placeholder.com/50
+    imgAlt: "Placeholder Image"
+  - name: Instagram
+    url : https://www.linkedin.com/
+    img : https://via.placeholder.com/50
+    imgAlt: "Placeholder Image"
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
