--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -33,9 +33,9 @@ layout: 'base.njk'
     </div>
 </div>
 
-<div class="section spacing">
-    <div class="work-content">
+<div class="section work-content spacing bottom-m-l top-m-s">
+    {# <div class="work-content"> #}
         {{ content | safe }}
         <!-- Will do this later as not too sure what you can do with rich text -->
-    </div>
+    {# </div> #}
 </div>
