--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -33,7 +33,7 @@ layout: 'base.njk'
     </div>
 </div>
 
-<div class="section work-content spacing bottom-m-l top-m-s">
+<div class="section work-content markdown spacing bottom-m-l top-m-s">
     {# <div class="work-content"> #}
         {{ content | safe }}
         <!-- Will do this later as not too sure what you can do with rich text -->
