Project restructured to be more organized, head information also updated

--- a/src/_includes/partials/_footer.njk
+++ b/src/_includes/partials/_footer.njk
@@ -11,7 +11,7 @@
             {% for item in socialLinks %}
                 <div class="footer-link">
                     <img src="{{ item.img }}" alt="{{ item.imgAlt }}">
-                    <a href="#">{{ item.name }}</a>
+                    <a href="{{ item.url }}">{{ item.name }}</a>
                 </div>
             {% endfor %}
             
