--- a/src/index.njk
+++ b/src/index.njk
@@ -30,7 +30,7 @@ layout: 'base.njk'
     <div class="projects">
 
         {% for project in collections.featured | reverse %}
-            {% include '_project-snippet.njk' %}
+            {% include 'partials/_project-snippet.njk' %}
         {% endfor %}
         
     </div>
