--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -20,7 +20,7 @@ socialLinks:
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" CONTENT="I am a passionate Social Media Marketer with an unmatched work ethic. Vist my site to find out more...">
+    
     <!-- <script type="application/ld+json">
         {
           "@context": "https://schema.org",
@@ -28,19 +28,31 @@ socialLinks:
           "url": "https://www.jinjerjane.com/"
         }
     </script> -->
-    <title>{{ title }}</title>
 
+    <!-- Meta Info --> 
+    <title>{{ title }}</title>
+    <meta name="Description" CONTENT="I am a passionate Social Media Marketer with an unmatched work ethic. Vist my site to find out more...">
+
+    <!-- Preload -->
+    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
+    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
+    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+
+    <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
+
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/main.js"></script>
+
 </head>
 <body>
-    {% include '_header.njk' %}
+    {% include 'partials/_header.njk' %}
     
     <main>
-    {{ content | safe }}
+      {{ content | safe }}
     </main>
     
-    {% include '_footer.njk' %}
+    {% include 'partials/_footer.njk' %}
 </body>
 </html>
