meta descripion and titles updated foreach page, this is build on SEO optimization

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -30,13 +30,13 @@ socialLinks:
     </script> -->
 
     <!-- Meta Info --> 
-    <title>{{ title }}</title>
-    <meta name="Description" CONTENT="I am a passionate Social Media Marketer with an unmatched work ethic. Vist my site to find out more...">
+    <title>John Doe - {{ title }}</title>
+    <meta name="Description" CONTENT="{{ metaDescription }}">
 
     <!-- Preload -->
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
