--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -1,6 +1,7 @@
 ---
 title: John Doe - Contact Me
 layout: 'base.njk'
+metaDescription: "Lets meet for a virtual coffee, I would love to develop your idea into an action."
 ---
 
 <div class="section contact-page spacing top-m-s full-page">
