--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
-title: John Doe - Portfolio Website
 layout: 'base.njk'
+title: Portfolio Website
+metaDescription: "Let my work blow you away on my portfolio website..."
 ---
 
 <div class="section landing">
