--- a/src/work/index.njk
+++ b/src/work/index.njk
@@ -1,6 +1,7 @@
 ---
-title: John Doe - Latest Projects
 layout: 'base.njk'
+title: Latest Projects
+metaDescription: "View my latest projects which includes a variety of clients."
 ---
 
 <div class="section spacing bottom-m-l top-m-m">
