--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -1,9 +1,10 @@
 ---
-title: John Doe - Get to know me
 layout: 'base.njk'
+title: John Doe - Get to know me
 summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
 landingImage: /assets/projects/placeholder-image.jpg
 landingImageAlt : "placeholder"
+metaDescription: "I create experiences, get to know me better and what motivates me."
 ---
 
 <div class="section spacing top-m-s">
