fix some meta titles

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -1,6 +1,6 @@
 ---
 layout: 'base.njk'
-title: John Doe - Get to know me
+title: Get to know me
 summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
 landingImage: /assets/projects/placeholder-image.jpg
 landingImageAlt : "placeholder"
