--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -1,5 +1,5 @@
 ---
-title: John Doe - Contact Me
+title: Contact Me
 layout: 'base.njk'
 metaDescription: "Lets meet for a virtual coffee, I would love to develop your idea into an action."
 ---
