--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -42,6 +42,7 @@ socialLinks:
     <link href="/style.css" rel="stylesheet">
 
     <!-- Scripts -->
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/main.js"></script>
 
@@ -54,5 +55,18 @@ socialLinks:
     </main>
     
     {% include 'partials/_footer.njk' %}
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
+
 </body>
 </html>
