netlify attribute added to contact page form

--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -9,7 +9,7 @@ metaDescription: "Lets meet for a virtual coffee, I would love to develop your i
     <h1>Interested in my work? Contact me below, its free...</h1>
 </div>
 
-<form action="" class="contact-form">
+<form name="contact" method="POST" data-netlify="true" class="contact-form">
     <div class="contact-detail">
         <label for="name">
             Name
