cms added to homepage

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,8 @@
 layout: 'base.njk'
 title: Portfolio Website
 metaDescription: "Let my work blow you away on my portfolio website..."
+intro: "Hi, my name is John Doe"
+summary: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
 ---
 
 <div class="section landing">
@@ -10,10 +12,10 @@ metaDescription: "Let my work blow you away on my portfolio website..."
             <img src="https://via.placeholder.com/600" alt="A picture of me">
         </div>
         <h1 class="into">    
-            Hi, my name is John Doe
+            {{ intro }}
         </h1>
         <h1 class="about">
-            I am an ethusiastic Social Media Manager
+            {{ summary }}
         </h1>
 
         <div class="call-to-action">
