fixed ordering of frontmatter for about page. Testing new property for contact page to update in CMS

--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: 'base.njk'
-tags: "contact"
+name: "contact"
 title: Contact Me
 metaDescription: "Lets meet for a virtual coffee, I would love to develop your idea into an action."
 ---
