--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: 'base.njk'
-name: "contact"
+tags: ["contact"]
 title: Contact Me
 metaDescription: "Lets meet for a virtual coffee, I would love to develop your idea into an action."
 ---
