reverted back to using .md files for cms customization, only easy and working solution

--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -1,3 +1,6 @@
+---
+layout: 'base.njk'
+---
 <div class="section contact-page spacing top-m-s full-page">
 <div class="title">
     <h1>Interested in my work? Contact me below, its free...</h1>
