Partial include added for contact form

--- a/public/style.css
+++ b/public/style.css
@@ -182,6 +182,10 @@ input:focus, textarea:focus{
     margin-bottom: 25vh;
 }
 
+.top-m-l{
+    margin-top: 20vh;
+}
+
 .top-m-m{
     margin-top: calc(var(--nav-height) + 4vh);
 }
