--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -2,29 +2,11 @@
 layout: 'base.njk'
 ---
 <div class="section contact-page spacing top-m-s full-page">
-<div class="title">
-    <h1>Interested in my work? Contact me below, its free...</h1>
-</div>
 
-<form name="contact" method="POST" data-netlify="true" class="contact-form">
-    <div class="contact-detail">
-        <label for="name">
-            Name
-        </label>
-        <input name="name" type="text" placeholder="John Doe">
+    <div class="title">
+        <h1>Interested in my work? Contact me below, its free...</h1>
     </div>
-    <div class="contact-detail">
-        <label for="email">
-            Email
-        </label>
-        <input name="email" type="email" placeholder="example@domain.com">
-    </div>
-    <div class="contact-detail">
-        <label for="message">
-            Message
-        </label>
-        <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
-    </div>
-    <input type="submit" value="Get in Touch" class="btn-primary">
-</form>
+
+    {% include 'partials/_contact-form.njk' %}
+
 </div>
