--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -27,7 +27,7 @@ layout: 'base.njk'
     </div>
 </div>
 
-<div class="section spacing">
+<div class="section spacing fit-content bottom-m-l">
     <div class="title">
         <h1>Skills</h1>
     </div>
@@ -47,7 +47,7 @@ layout: 'base.njk'
     </div>
 </div>
 
-<div class="section spacing">
+<div class="section spacing fit-content bottom-m-l">
     <div class="title">
         <h1>Interests</h1>
     </div>
@@ -60,10 +60,10 @@ layout: 'base.njk'
         </ul>
         <img src="https://via.placeholder.com/600" alt="placeholderImage">
     </div>
+</div>
 
-    <div class="spacing markdown bottom-m-l top-m-s">
+<div class="section spacing markdown bottom-m-l">
 
-        {{ content | safe}}
+    {{ content | safe}}
 
-    </div>
 </div>
