--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -7,10 +7,10 @@ layout: 'base.njk'
         <div class="avatar">
             <img src="https://via.placeholder.com/600" alt="A picture of me">
         </div>
-        <h1 class="into">    
+        <h1 class="intro">    
             {{ intro }}
         </h1>
-        <h1 class="about">
+        <h1 class="short-summary">
             {{ summary }}
         </h1>
 
