--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -42,22 +42,22 @@
                     <ul class="hamburger-links">
                         <li>
                             <a href="/">
-                                Home
+                                <span>Home</span>
                             </a>
                         </li>
                         <li>
                             <a href="/work/">
-                                Work
+                                <span>Work</span>
                             </a>
                         </li>
                         <li>
                             <a href="/about/">
-                                About
+                                <span>About</span>
                             </a>
                         </li>
                         <li>
                             <a href="/contact/">
-                                Contact
+                                <span>Contact</span>
                             </a>
                         </li>
                     </ul>
