--- a/src/_includes/partials/_footer.njk
+++ b/src/_includes/partials/_footer.njk
@@ -1,6 +1,6 @@
 <footer>
     <div class="copy-right">
-        <p>Copyright @2021 John Doe</p>
+        <p>Copyright @{{ utils.currentYear() }} John Doe</p>
     </div>
     <div class="footer-links">
         <div class="social-media">
