--- a/src/_includes/partials/_footer.njk
+++ b/src/_includes/partials/_footer.njk
@@ -8,7 +8,7 @@
                 <p>Follow Me</p>
             </div>
 
-            {% for item in socialLinks %}
+            {% for item in global.socialLinks %}
                 <div class="footer-link">
                     <img src="{{ item.img }}" alt="{{ item.imgAlt }}">
                     <a href="{{ item.url }}">{{ item.name }}</a>
