--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -50,6 +50,7 @@ pagination:
                 {% endif %}
             </li>
         </ol>
+        <span>({{pagination.size}})</span>
     </nav>
 
     <div class="projects">
