fixed counting amount of current projects. Only able to solve with JS and not njk

--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -2,8 +2,6 @@
 layout: 'base.njk'
 ---
 
-{% set currentProjectsCount = 0 %}
-
 <div class="section spacing bottom-m-l top-m-m">
     <div class="title">
         <h1 class="bottom-m-s">All Projects</h1>
@@ -48,13 +46,12 @@ layout: 'base.njk'
                 {% endif %}
             </li>
         </ol>
-        <span>({{pagination.length}})</span>
+        <span></span>
     </nav>
 
     <div class="projects">
 
         {% for project in pagination.items %}
-            {% set currentProjecsCount += 1 %}
             {% include 'partials/_project-snippet.njk' %}
         {% endfor %}
         
@@ -67,4 +64,6 @@ layout: 'base.njk'
     if(amountOfCards > 0 && amountOfCards % 2 !== 0){
         $('.projects').children().last().addClass("last-card");
     }
+
+    $(".pagination span").html("(" + amountOfCards + ")");
 </script>
