SEO integrated into each page and separated into separate object

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -4,7 +4,7 @@ layout: 'base.njk'
 
 <div class="section spacing top-m-s">
     <div class="title">
-        <h1>Get to Know Me</h1>
+        <h1>{{ title }}</h1>
     </div>
 
     <div class="about-grid">
