--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -5,7 +5,7 @@ layout: 'base.njk'
 <div class="section landing">
     <div class="hero">
         <div class="avatar">
-            <img src="https://via.placeholder.com/600" alt="A picture of me">
+            <img src="{{ landingImage }}" alt="{{ landingImageAlt }}"> 
         </div>
         <h1 class="intro">    
             {{ intro }}
