--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - {{ SEO.title }}</title>
+    <title>John Doe - {{ SEO.metaTitle }}</title>
     <meta name="description" CONTENT="{{ SEO.metaDescription }}">
 
     <!-- Favicon -->
@@ -22,9 +22,9 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="{{ site.authorTwitter }}" />
     <meta property="og:url" content="{{ site.url ~ page.url }}" />
-    <meta property="og:title" content="{{ SEO.title }}" />
+    <meta property="og:title" content="{{ SEO.metaTitle }}" />
     <meta property="og:description" content="{{ SEO.metaDescription }}" />
-    <meta property="og:image" content="{{ SEO.metaImage }}" />
+    <meta property="og:image" content="{{site.url ~ SEO.metaImage }}" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
