--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -2,6 +2,11 @@
 layout: 'base.njk'
 ---
 
+{% set metaTitle = title %}
+{% set metaDescription = summary %}
+{% set metaImage = image %}
+
+
 <img class="work-bg-img" src="{{ image }}" alt="{{ imageAlt}}">
 <div class="section spacing full-page top-p-m">
     <div class="title">
