All SEO info integrated into fields for each page. Less overhead when updating.

--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -1,5 +1,10 @@
 ---
 layout: 'base.njk'
+eleventyComputed:
+  SEO: 
+    metaTitle: "{{title}}"
+    metaDescription: "{{summary}}"
+    metaImage: "{{landingImage}}"
 ---
 
 <div class="section landing">
