--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -1,5 +1,10 @@
 ---
 layout: 'base.njk'
+eleventyComputed:
+  SEO: 
+    metaTitle: "{{title}}"
+    metaDescription: "{{summary}}"
+    metaImage: "{{image}}"
 ---
 
 <div class="section spacing bottom-m-l top-m-m">
