--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -1,5 +1,10 @@
 ---
 layout: 'base.njk'
+eleventyComputed:
+  SEO: 
+    metaTitle: "{{title}}"
+    metaDescription: "{{summary}}"
+    metaImage: "{{image}}"
 ---
 <div class="section contact-page spacing top-m-s full-page">
 
