global json renamed to site json. Now includes a link to the website, fixing link for SEO

--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -4,7 +4,7 @@
             <div class="nav-main">
                 <li>
                     <a href="/" class="nav-logo">
-                        <object type="image/svg+xml" data="{{ global.logo }}"></object>
+                        <object type="image/svg+xml" data="{{ site.logo }}"></object>
                     </a>
                 </li>
             </div>
